웹크롤링실습3일차

--- a/python_crawling/06_bs4_naver_relational_keyword.ipynb
+++ b/python_crawling/06_bs4_naver_relational_keyword.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        "'<!doctype html> <html lang=\"ko\"> <head> <meta charset=\"utf-8\"> <meta name=\"referrer\" content=\"always\">  <meta name=\"format-detection\" content=\"telephone=no,address=no,email=no\"> <meta name=\"viewport\" content=\"width=device-width,initial-scale=1.0,maxi'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "bs4.BeautifulSoup"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "10"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "'삼성전자 주가'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        "'?where=nexearch&query=%EC%82%BC%EC%84%B1%EC%A0%84%EC%9E%90+%EC%A3%BC%EA%B0%80&ie=utf8&sm=tab_she&qdt=0'"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
        "4  삼성전자 배당금 지급일  삼성전자"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,16 +294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-02-22 13:51'"
+       "'2022-02-25 16:03'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -353,31 +353,31 @@
        "      <th>0</th>\n",
        "      <td>삼성전자 주가</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>2022-02-25 16:03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>삼성전자 배당금</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>2022-02-25 16:03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>삼성전자 주식</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>2022-02-25 16:03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>삼성전자 특별보너스</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>2022-02-25 16:03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>삼성전자 배당금 지급일</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>2022-02-25 16:03</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -385,14 +385,14 @@
       ],
       "text/plain": [
        "        keywors query         date_time\n",
-       "0       삼성전자 주가  삼성전자  2022-02-22 13:51\n",
-       "1      삼성전자 배당금  삼성전자  2022-02-22 13:51\n",
-       "2       삼성전자 주식  삼성전자  2022-02-22 13:51\n",
-       "3    삼성전자 특별보너스  삼성전자  2022-02-22 13:51\n",
-       "4  삼성전자 배당금 지급일  삼성전자  2022-02-22 13:51"
+       "0       삼성전자 주가  삼성전자  2022-02-25 16:03\n",
+       "1      삼성전자 배당금  삼성전자  2022-02-25 16:03\n",
+       "2       삼성전자 주식  삼성전자  2022-02-25 16:03\n",
+       "3    삼성전자 특별보너스  삼성전자  2022-02-25 16:03\n",
+       "4  삼성전자 배당금 지급일  삼성전자  2022-02-25 16:03"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -430,54 +430,78 @@
        "      <th></th>\n",
        "      <th>keywors</th>\n",
        "      <th>query</th>\n",
-       "      <th>date_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>삼성전자 주가</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>내장산cc</td>\n",
+       "      <td>내장산</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>삼성전자 배당금</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>내장산 케이블카</td>\n",
+       "      <td>내장산</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>삼성전자 주식</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>내장산 등산코스</td>\n",
+       "      <td>내장산</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>삼성전자 특별보너스</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>내장산 날씨</td>\n",
+       "      <td>내장산</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>삼성전자 배당금 지급일</td>\n",
-       "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
+       "      <td>내장산 복분자주</td>\n",
+       "      <td>내장산</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>내장산 맛집</td>\n",
+       "      <td>내장산</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>내장산국민여가캠핑장</td>\n",
+       "      <td>내장산</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>내장산생태탐방원</td>\n",
+       "      <td>내장산</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>내장산 최단코스</td>\n",
+       "      <td>내장산</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>내장산관광호텔</td>\n",
+       "      <td>내장산</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "        keywors query         date_time\n",
-       "0       삼성전자 주가  삼성전자  2022-02-22 13:51\n",
-       "1      삼성전자 배당금  삼성전자  2022-02-22 13:51\n",
-       "2       삼성전자 주식  삼성전자  2022-02-22 13:51\n",
-       "3    삼성전자 특별보너스  삼성전자  2022-02-22 13:51\n",
-       "4  삼성전자 배당금 지급일  삼성전자  2022-02-22 13:51"
+       "      keywors query\n",
+       "0       내장산cc   내장산\n",
+       "1    내장산 케이블카   내장산\n",
+       "2    내장산 등산코스   내장산\n",
+       "3      내장산 날씨   내장산\n",
+       "4    내장산 복분자주   내장산\n",
+       "5      내장산 맛집   내장산\n",
+       "6  내장산국민여가캠핑장   내장산\n",
+       "7    내장산생태탐방원   내장산\n",
+       "8    내장산 최단코스   내장산\n",
+       "9     내장산관광호텔   내장산"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,20 +519,20 @@
     "    df = pd.DataFrame({\"keywors\": keywords})\n",
     "    df[\"query\"] = query\n",
     "    \n",
-    "    now = datetime.now()\n",
-    "    now = now.strftime(\"%Y-%m-%d %H:%M\")\n",
-    "    df[\"date_time\"] = now\n",
+    "    # now = datetime.now()\n",
+    "    # now = now.strftime(\"%Y-%m-%d %H:%M\")\n",
+    "    # df[\"date_time\"] = now\n",
     "    \n",
     "    return df\n",
     "\n",
-    "query = \"삼성전자\"\n",
+    "query = \"내장산\"\n",
     "df = naver_relate_keyword(query)\n",
-    "df.head()"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +565,6 @@
        "      <th></th>\n",
        "      <th>keywors</th>\n",
        "      <th>query</th>\n",
-       "      <th>date_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -549,151 +572,131 @@
        "      <th>0</th>\n",
        "      <td>삼성전자 주가</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>삼성전자 배당금</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>삼성전자 주식</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>삼성전자 특별보너스</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>삼성전자 배당금 지급일</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>오늘 삼성전자 주가</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>삼성전자 성과급</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>삼성 전자레인지</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>삼성전자 채용</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>삼성전자 보너스</td>\n",
        "      <td>삼성전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>lg전자 주가</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>lg전자 서비스센터</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>lg전자 성과급</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>lg전자 베스트샵</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>lg 전자레인지</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>lg전자 배당금</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>lg전자 고객센터</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>lg전자 서비스센터 전화번호</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>LG전자성과급 논란</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>lg전자 애플카</td>\n",
        "      <td>LG전자</td>\n",
-       "      <td>2022-02-22 13:51</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            keywors query         date_time\n",
-       "0           삼성전자 주가  삼성전자  2022-02-22 13:51\n",
-       "1          삼성전자 배당금  삼성전자  2022-02-22 13:51\n",
-       "2           삼성전자 주식  삼성전자  2022-02-22 13:51\n",
-       "3        삼성전자 특별보너스  삼성전자  2022-02-22 13:51\n",
-       "4      삼성전자 배당금 지급일  삼성전자  2022-02-22 13:51\n",
-       "5        오늘 삼성전자 주가  삼성전자  2022-02-22 13:51\n",
-       "6          삼성전자 성과급  삼성전자  2022-02-22 13:51\n",
-       "7          삼성 전자레인지  삼성전자  2022-02-22 13:51\n",
-       "8           삼성전자 채용  삼성전자  2022-02-22 13:51\n",
-       "9          삼성전자 보너스  삼성전자  2022-02-22 13:51\n",
-       "10          lg전자 주가  LG전자  2022-02-22 13:51\n",
-       "11       lg전자 서비스센터  LG전자  2022-02-22 13:51\n",
-       "12         lg전자 성과급  LG전자  2022-02-22 13:51\n",
-       "13        lg전자 베스트샵  LG전자  2022-02-22 13:51\n",
-       "14         lg 전자레인지  LG전자  2022-02-22 13:51\n",
-       "15         lg전자 배당금  LG전자  2022-02-22 13:51\n",
-       "16        lg전자 고객센터  LG전자  2022-02-22 13:51\n",
-       "17  lg전자 서비스센터 전화번호  LG전자  2022-02-22 13:51\n",
-       "18       LG전자성과급 논란  LG전자  2022-02-22 13:51\n",
-       "19         lg전자 애플카  LG전자  2022-02-22 13:51"
+       "            keywors query\n",
+       "0           삼성전자 주가  삼성전자\n",
+       "1          삼성전자 배당금  삼성전자\n",
+       "2           삼성전자 주식  삼성전자\n",
+       "3        삼성전자 특별보너스  삼성전자\n",
+       "4      삼성전자 배당금 지급일  삼성전자\n",
+       "5        오늘 삼성전자 주가  삼성전자\n",
+       "6          삼성전자 성과급  삼성전자\n",
+       "7          삼성 전자레인지  삼성전자\n",
+       "8           삼성전자 채용  삼성전자\n",
+       "9          삼성전자 보너스  삼성전자\n",
+       "10          lg전자 주가  LG전자\n",
+       "11       lg전자 서비스센터  LG전자\n",
+       "12         lg전자 성과급  LG전자\n",
+       "13        lg전자 베스트샵  LG전자\n",
+       "14         lg 전자레인지  LG전자\n",
+       "15         lg전자 배당금  LG전자\n",
+       "16        lg전자 고객센터  LG전자\n",
+       "17  lg전자 서비스센터 전화번호  LG전자\n",
+       "18       LG전자성과급 논란  LG전자\n",
+       "19         lg전자 애플카  LG전자"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -738,14 +741,14 @@
        " 'kt 대리점',\n",
        " 'kt 먹통',\n",
        " 'kt 고객센터 전화번호',\n",
-       " 'sk텔레콤',\n",
+       " 'kt 홈페이지',\n",
+       " '케이티',\n",
        " 'kt m모바일',\n",
-       " 'kt 요금제',\n",
-       " 'kt 주가',\n",
-       " '케이티']"
+       " 'sk텔레콤',\n",
+       " 'kt 요금제']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
