--- a/ML/익히기/실습02_01_성능평가(Happy).ipynb
+++ b/ML/익히기/실습02_01_성능평가(Happy).ipynb
@@ -95,74 +95,383 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "K2pz6Ee7nCQV",
     "outputId": "ba4eff27-7bf5-4669-a0a3-15827aaa79fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>happiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3.862647</td>\n",
+       "      <td>2.314489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.979381</td>\n",
+       "      <td>3.433490</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.923957</td>\n",
+       "      <td>4.599373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.214372</td>\n",
+       "      <td>2.791114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>7.196409</td>\n",
+       "      <td>5.596398</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     income  happiness\n",
+       "0  3.862647   2.314489\n",
+       "1  4.979381   3.433490\n",
+       "2  4.923957   4.599373\n",
+       "3  3.214372   2.791114\n",
+       "4  7.196409   5.596398"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 상위 몇 개 행 확인\n"
+    "# 상위 몇 개 행 확인\n",
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "whCAH-EAnCQV",
     "outputId": "f62c354c-bc9c-4f41-e00f-657bc2ab63cd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>happiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>493</th>\n",
+       "      <td>5.249209</td>\n",
+       "      <td>4.568705</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>494</th>\n",
+       "      <td>3.471799</td>\n",
+       "      <td>2.535002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>6.087610</td>\n",
+       "      <td>4.397451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>496</th>\n",
+       "      <td>3.440847</td>\n",
+       "      <td>2.070664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>497</th>\n",
+       "      <td>4.530545</td>\n",
+       "      <td>3.710193</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       income  happiness\n",
+       "493  5.249209   4.568705\n",
+       "494  3.471799   2.535002\n",
+       "495  6.087610   4.397451\n",
+       "496  3.440847   2.070664\n",
+       "497  4.530545   3.710193"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 하위 몇 개 행 확인\n"
+    "# 하위 몇 개 행 확인\n",
+    "data.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "1ZsXdcfp8uwI",
     "outputId": "4cd9ad96-3e35-4f5d-ebe6-e4f9f591a384"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 498 entries, 0 to 497\n",
+      "Data columns (total 2 columns):\n",
+      " #   Column     Non-Null Count  Dtype  \n",
+      "---  ------     --------------  -----  \n",
+      " 0   income     498 non-null    float64\n",
+      " 1   happiness  498 non-null    float64\n",
+      "dtypes: float64(2)\n",
+      "memory usage: 7.9 KB\n"
+     ]
+    }
+   ],
    "source": [
-    "# 변수 확인\n"
+    "# 변수 확인\n",
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "id": "4bD117Q3bVuf",
     "outputId": "dd2e6aae-2492-4629-fd52-3b32ce5e48e6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "996"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 데이터 크기 확인\n"
+    "# 데이터 크기 확인\n",
+    "data.size"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "id": "LhAk04Uy4Occ",
     "outputId": "1f4cb236-4ab3-40dc-c3fd-676272f6c85f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>happiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>498.000000</td>\n",
+       "      <td>498.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>4.466902</td>\n",
+       "      <td>3.392859</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.737527</td>\n",
+       "      <td>1.432813</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.506275</td>\n",
+       "      <td>0.266044</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>3.006256</td>\n",
+       "      <td>2.265864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>4.423710</td>\n",
+       "      <td>3.472536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>5.991913</td>\n",
+       "      <td>4.502621</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.481521</td>\n",
+       "      <td>6.863388</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           income   happiness\n",
+       "count  498.000000  498.000000\n",
+       "mean     4.466902    3.392859\n",
+       "std      1.737527    1.432813\n",
+       "min      1.506275    0.266044\n",
+       "25%      3.006256    2.265864\n",
+       "50%      4.423710    3.472536\n",
+       "75%      5.991913    4.502621\n",
+       "max      7.481521    6.863388"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 기초통계량 확인\n"
+    "# 기초통계량 확인\n",
+    "data.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "id": "K09lnS9i4itn",
     "outputId": "854e07cf-f59f-43d7-a525-fd5c2cbf0b2e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>income</th>\n",
+       "      <th>happiness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>income</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.865634</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>happiness</th>\n",
+       "      <td>0.865634</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             income  happiness\n",
+       "income     1.000000   0.865634\n",
+       "happiness  0.865634   1.000000"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 상관관계 확인\n"
+    "# 상관관계 확인\n",
+    "data.corr()"
    ]
   },
   {
@@ -196,17 +505,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "wwiBjMMknCQc"
    },
    "outputs": [],
    "source": [
     "# target 확인\n",
-    "\n",
+    "target = 'happiness'\n",
     "\n",
     "# 데이터 분리\n",
-    "\n"
+    "x = data.drop(target, axis=1)\n",
+    "y = data[target]"
    ]
   },
   {
@@ -220,16 +530,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "id": "FsW0b-pXnCQf"
    },
    "outputs": [],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
-    "# 7:3으로 분리\n"
+    "# 7:3으로 분리\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=2022)"
    ]
   },
   {
@@ -264,47 +575,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "id": "FfCQ83g4nCQg"
    },
    "outputs": [],
    "source": [
-    "# 1단계: 불러오기\n"
+    "# 1단계: 불러오기\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "id": "aAMDmeufnCQh"
    },
    "outputs": [],
    "source": [
-    "# 2단계: 선언하기\n"
+    "# 2단계: 선언하기\n",
+    "model = LinearRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "id": "bg--SLXRnCQi",
     "outputId": "72e69481-0a36-40d3-bb2a-9690dbbf574a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3단계: 학습하기\n"
+    "# 3단계: 학습하기\n",
+    "model.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "id": "IruLu2IZnCQj"
    },
    "outputs": [],
    "source": [
-    "# 4단계: 예측하기\n"
+    "# 4단계: 예측하기\n",
+    "y_pred = model.predict(x_test)"
    ]
   },
   {
@@ -329,17 +655,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "HpAM55uT0h7n",
     "outputId": "1b3460da-b37d-40bb-88cf-1dd14c3807eb"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE:  0.5466885866485438\n"
+     ]
+    }
+   ],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "\n",
-    "# 성능 평가\n"
+    "# 성능 평가\n",
+    "print('MAE: ', mean_absolute_error(y_test, y_pred))"
    ]
   },
   {
@@ -353,17 +688,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "nCZiofNV0h7o",
     "outputId": "44498d72-e92d-43d3-fd36-4c87f014e87f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE:  0.45061240324267904\n"
+     ]
+    }
+   ],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "\n",
-    "# 성능 평가\n"
+    "# 성능 평가\n",
+    "print('MSE: ', mean_squared_error(y_test, y_pred))"
    ]
   },
   {
@@ -377,17 +721,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "id": "zZc-7-iH0h7p",
     "outputId": "c4b8d43f-3bc2-45a3-df49-e3879c4b4db2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE:  0.671276696484154\n"
+     ]
+    }
+   ],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
-    "\n",
-    "# 성능 평가\n"
+    "# 성능 평가\n",
+    "print('RMSE: ', mean_squared_error(y_test, y_pred)**(1/2))"
    ]
   },
   {
@@ -401,17 +754,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "3m6dcNz-0h7p",
     "outputId": "9f60d00a-2647-4918-f665-cb7ab41681d3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE:  0.24986813057928714\n"
+     ]
+    }
+   ],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.metrics import mean_absolute_percentage_error\n",
     "\n",
-    "\n",
-    "# 성능 평가\n"
+    "# 성능 평가\n",
+    "print('MAPE: ', mean_absolute_percentage_error(y_test, y_pred))"
    ]
   },
   {
@@ -425,17 +787,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "i8Vkxgkl0h7q",
     "outputId": "bda30ddd-1f61-409a-a8b8-d5c271566e67"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2:  0.7756709291514665\n"
+     ]
+    }
+   ],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
-    "\n",
-    "# 성능 평가\n"
+    "# 성능 평가\n",
+    "print('R2: ', r2_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**6) 참고: score**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7756709291514665"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# score로 평가\n",
+    "model.score(x_test, y_test) # R2와 동일한 결과"
    ]
   }
  ],
