--- a/ML/배우기/ML02_01_성능평가(AirQuality).ipynb
+++ b/ML/배우기/ML02_01_성능평가(AirQuality).ipynb
@@ -1266,7 +1266,7 @@
    "source": [
     "**5) R-Squared**\n",
     "\n",
-    "$$\\large R^2=1-\\frac{SSE}{SST}=1-\\frac{\\sum_{i=1}^{n}(y_{i}-\\hat{y}_{i})^2}{\\sum_{i=1}^{n}(y_{i}-\\bar{y}_{i})^2}$$"
+    "$$\\large R^2=1-\\frac{SSE}{SST}=1-\\frac{\\sum_{i=1}^{n}(y_{i}-\\hat{y}_{i})^2}{\\sum_{i=1}^{n}(y_{i}-\\bar{y})^2}$$"
    ]
   },
   {
