--- a/ML/익히기/실습04_01_로지스틱회귀(Iris).ipynb
+++ b/ML/익히기/실습04_01_로지스틱회귀(Iris).ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "executionInfo": {
      "elapsed": 374,
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "executionInfo": {
      "elapsed": 405,
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -117,7 +117,94 @@
     "id": "Wzs1nS348uwE",
     "outputId": "3d968706-053f-4964-cf5f-49aed676bde0"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sepal.Length  Sepal.Width  Petal.Length  Petal.Width Species\n",
+       "0           5.1          3.5           1.4          0.2  setosa\n",
+       "1           4.9          3.0           1.4          0.2  setosa\n",
+       "2           4.7          3.2           1.3          0.2  setosa\n",
+       "3           4.6          3.1           1.5          0.2  setosa\n",
+       "4           5.0          3.6           1.4          0.2  setosa"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 상위 몇 개 행 확인\n",
     "data.head()"
@@ -125,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -145,7 +232,112 @@
     "id": "LhAk04Uy4Occ",
     "outputId": "79246691-7973-4d35-e7ea-1e415ac3c5a7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>150.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>5.843333</td>\n",
+       "      <td>3.057333</td>\n",
+       "      <td>3.758000</td>\n",
+       "      <td>1.199333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.828066</td>\n",
+       "      <td>0.435866</td>\n",
+       "      <td>1.765298</td>\n",
+       "      <td>0.762238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>4.300000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>2.800000</td>\n",
+       "      <td>1.600000</td>\n",
+       "      <td>0.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>5.800000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>4.350000</td>\n",
+       "      <td>1.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>6.400000</td>\n",
+       "      <td>3.300000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>1.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.900000</td>\n",
+       "      <td>4.400000</td>\n",
+       "      <td>6.900000</td>\n",
+       "      <td>2.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
+       "count    150.000000   150.000000    150.000000   150.000000\n",
+       "mean       5.843333     3.057333      3.758000     1.199333\n",
+       "std        0.828066     0.435866      1.765298     0.762238\n",
+       "min        4.300000     2.000000      1.000000     0.100000\n",
+       "25%        5.100000     2.800000      1.600000     0.300000\n",
+       "50%        5.800000     3.000000      4.350000     1.300000\n",
+       "75%        6.400000     3.300000      5.100000     1.800000\n",
+       "max        7.900000     4.400000      6.900000     2.500000"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 기초통계량 확인\n",
     "data.describe()"
@@ -153,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -172,7 +364,21 @@
     "id": "-9x7q3nsL4Uu",
     "outputId": "6132a456-6141-43d7-ada6-0748e8908dc9"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "setosa        50\n",
+       "versicolor    50\n",
+       "virginica     50\n",
+       "Name: Species, dtype: int64"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 범주값 개수 확인\n",
     "data['Species'].value_counts()"
@@ -180,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -200,7 +406,80 @@
     "id": "P6dWTvKQ3ABP",
     "outputId": "37753019-c714-4be9-dcae-f629cb7bd893"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.117570</td>\n",
+       "      <td>0.871754</td>\n",
+       "      <td>0.817941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <td>-0.117570</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.428440</td>\n",
+       "      <td>-0.366126</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <td>0.871754</td>\n",
+       "      <td>-0.428440</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.962865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <td>0.817941</td>\n",
+       "      <td>-0.366126</td>\n",
+       "      <td>0.962865</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
+       "Sepal.Length      1.000000    -0.117570      0.871754     0.817941\n",
+       "Sepal.Width      -0.117570     1.000000     -0.428440    -0.366126\n",
+       "Petal.Length      0.871754    -0.428440      1.000000     0.962865\n",
+       "Petal.Width       0.817941    -0.366126      0.962865     1.000000"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 상관관계 확인\n",
     "data.corr()"
@@ -228,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "executionInfo": {
      "elapsed": 13,
@@ -246,10 +525,11 @@
    "outputs": [],
    "source": [
     "# target 확인\n",
-    "\n",
+    "target = 'Species'\n",
     "\n",
     "# 데이터 분리\n",
-    "\n"
+    "x = data.drop(target, axis=1)\n",
+    "y = data[target]"
    ]
   },
   {
@@ -263,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "executionInfo": {
      "elapsed": 418,
@@ -281,9 +561,10 @@
    "outputs": [],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
-    "# 7:3으로 분리\n"
+    "# 7:3으로 분리\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=2022)"
    ]
   },
   {
@@ -299,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "executionInfo": {
      "elapsed": 9,
@@ -317,12 +598,13 @@
    "outputs": [],
    "source": [
     "# 1단계: 불러오기\n",
-    "\n"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "executionInfo": {
      "elapsed": 10,
@@ -339,12 +621,13 @@
    },
    "outputs": [],
    "source": [
-    "# 2단계: 선언하기\n"
+    "# 2단계: 선언하기\n",
+    "model = LogisticRegression(max_iter=500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -363,14 +646,26 @@
     "id": "pVIhN9r51_bz",
     "outputId": "4f84f264-45ec-43d9-b7c1-5367eb5d8491"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(max_iter=500)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 3단계: 학습하기\n"
+    "# 3단계: 학습하기\n",
+    "model.fit(x_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -387,12 +682,13 @@
    },
    "outputs": [],
    "source": [
-    "# 4단계: 예측하기\n"
+    "# 4단계: 예측하기\n",
+    "y_pred = model.predict(x_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -411,10 +707,31 @@
     "id": "61MLrBez1_b2",
     "outputId": "60ac8df8-50b0-4884-dcee-49c58fc800ea"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[14  0  0]\n",
+      " [ 0 15  0]\n",
+      " [ 0  1 15]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      setosa       1.00      1.00      1.00        14\n",
+      "  versicolor       0.94      1.00      0.97        15\n",
+      "   virginica       1.00      0.94      0.97        16\n",
+      "\n",
+      "    accuracy                           0.98        45\n",
+      "   macro avg       0.98      0.98      0.98        45\n",
+      "weighted avg       0.98      0.98      0.98        45\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 5단계 평가하기\n",
-    "\n"
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -426,60 +743,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Sepal.Length', 'Sepal.Width', 'Petal.Length', 'Petal.Width']\n",
+      "[[-0.39229326  0.85677362 -2.233365   -0.98443734]\n",
+      " [ 0.558705   -0.25249701 -0.11346233 -0.90531565]\n",
+      " [-0.16641174 -0.60427662  2.34682734  1.889753  ]]\n",
+      "[  8.8505434    1.21891531 -10.0694587 ]\n"
+     ]
+    }
+   ],
    "source": [
     "# 가중치, 편향 확인\n",
-    "\n"
+    "print(list(x))\n",
+    "print(model.coef_)\n",
+    "print(model.intercept_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-5.84  1.55  4.28]\n",
+      " [-8.37  2.06  6.31]\n",
+      " [ 5.85  2.76 -8.61]\n",
+      " [-5.06  1.76  3.3 ]\n",
+      " [ 6.43  2.75 -9.18]\n",
+      " [ 6.29  2.61 -8.89]\n",
+      " [ 0.04  2.44 -2.49]\n",
+      " [-0.82  2.26 -1.44]\n",
+      " [ 6.52  2.84 -9.37]\n",
+      " [-1.25  2.41 -1.15]]\n"
+     ]
+    }
+   ],
    "source": [
     "# z값 확인\n",
-    "\n"
+    "z = model.decision_function(x_test)\n",
+    "print(z[:10].round(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.83 0.99]\n",
+      " [0.   0.89 1.  ]\n",
+      " [1.   0.94 0.  ]\n",
+      " [0.01 0.85 0.96]\n",
+      " [1.   0.94 0.  ]\n",
+      " [1.   0.93 0.  ]\n",
+      " [0.51 0.92 0.08]\n",
+      " [0.31 0.91 0.19]\n",
+      " [1.   0.95 0.  ]\n",
+      " [0.22 0.92 0.24]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# sigmoid 함수 값 확인\n",
-    "\n"
+    "# softmax 함수 값 확인\n",
+    "from scipy.special import expit\n",
+    "print(expit(z)[:10].round(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.06 0.94]\n",
+      " [0.   0.01 0.99]\n",
+      " [0.96 0.04 0.  ]\n",
+      " [0.   0.18 0.82]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.08 0.91 0.01]\n",
+      " [0.04 0.93 0.02]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.02 0.95 0.03]]\n"
+     ]
+    }
+   ],
    "source": [
     "# p값 확인\n",
-    "\n"
+    "p = model.predict_proba(x_test)\n",
+    "print(p[:10].round(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.   0.06 0.94]\n",
+      " [0.   0.01 0.99]\n",
+      " [0.96 0.04 0.  ]\n",
+      " [0.   0.18 0.82]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.08 0.91 0.01]\n",
+      " [0.04 0.93 0.02]\n",
+      " [0.98 0.02 0.  ]\n",
+      " [0.02 0.95 0.03]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 가장 큰 값의 인덱스 확인\n"
+    "# softmax 함수 값 확인\n",
+    "from scipy.special import softmax\n",
+    "print(softmax(z, axis=1)[:10].round(2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 0 2 0 0 1 1 0 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "# 예측값 확인\n"
+    "# 가장 큰 값의 인덱스 확인\n",
+    "print(p[:10].argmax(axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['virginica',\n",
+       " 'virginica',\n",
+       " 'setosa',\n",
+       " 'virginica',\n",
+       " 'setosa',\n",
+       " 'setosa',\n",
+       " 'versicolor',\n",
+       " 'versicolor',\n",
+       " 'setosa',\n",
+       " 'versicolor']"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 가장 큰 값의 인덱스 - 클래스 이름으로 확인\n",
+    "[y.unique()[x] for x in p[:10].argmax(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['virginica' 'virginica' 'setosa' 'virginica' 'setosa' 'setosa'\n",
+      " 'versicolor' 'versicolor' 'setosa' 'versicolor']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 예측값 확인\n",
+    "print(y_pred[:10])"
    ]
   }
  ],
@@ -504,7 +966,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
