--- a/ML/익히기/실습05_03_GridSearch(KNN,Titanic).ipynb
+++ b/ML/익히기/실습05_03_GridSearch(KNN,Titanic).ipynb
@@ -304,7 +304,6 @@
    "source": [
     "# 가변수화\n",
     "dummy_vars = ['Title', 'AgeGroup', 'Pclass', 'Sex', 'Embarked']\n",
-    "\n",
     "data = pd.get_dummies(data, columns=dummy_vars, drop_first=True)"
    ]
   },
@@ -348,10 +347,11 @@
    "outputs": [],
    "source": [
     "# target 확인\n",
-    "\n",
+    "target = 'Survived'\n",
     "\n",
     "# 데이터 분리\n",
-    "\n"
+    "x = data.drop(target, axis = 1)\n",
+    "y = data[target] "
    ]
   },
   {
@@ -388,9 +388,11 @@
    "outputs": [],
    "source": [
     "# 정규화\n",
+    "cols = ['SibSp', 'Parch', 'Fare']\n",
+    "x[cols] = (x[cols] - x[cols].min()) / (x[cols].max() - x[cols].min())\n",
     "\n",
-    "\n",
-    "# 확인\n"
+    "# 확인\n",
+    "x.head()"
    ]
   },
   {
@@ -411,9 +413,10 @@
    "outputs": [],
    "source": [
     "# 모듈 불러오기\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "\n",
-    "# 7:3으로 분리\n"
+    "# 7:3으로 분리\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.3, random_state=2022)"
    ]
   },
   {
@@ -514,7 +517,7 @@
    },
    "outputs": [],
    "source": [
-    "# 최적파라미터, 최고학습성능 확인\n",
+    "# 최적파라미터, 성능 확인\n",
     "\n"
    ]
   },
