--- a/ML/익히기/실습06_04_종합실습(Diabetes).ipynb
+++ b/ML/익히기/실습06_04_종합실습(Diabetes).ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "# 데이터 불러오기\n",
-    "path = 'https://raw.githubusercontent.com/jangrae/csv/master/titanic.csv'\n",
+    "path = 'https://raw.githubusercontent.com/jangrae/csv/master/diabetes.csv'\n",
     "data = pd.read_csv(path)"
    ]
   },
@@ -143,149 +143,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ZHAm-eoFse1_"
-   },
-   "source": [
-    "**1) Title 변수 추가**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "lgmZKwlsY54S"
-   },
-   "outputs": [],
-   "source": [
-    "# 호칭 추출\n",
-    "data['Title'] = data['Name'].str.extract('([A-Za-z]+)\\.', expand=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3Lm6IKZgwUiQ"
-   },
-   "outputs": [],
-   "source": [
-    "# 대표 호칭 이외는 Others로 변경\n",
-    "main_tit_list = ['Mr', 'Miss', 'Mrs']\n",
-    "data.loc[data['Title'].isin(main_tit_list)==False, ['Title']] = 'Others'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "mIxcFuf0CoxF"
-   },
-   "source": [
-    "**2) 결측치 처리**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "TBr9jcvWPJmi"
-   },
-   "outputs": [],
-   "source": [
-    "# Age 중앙값으로 채우기\n",
-    "data['Age'].fillna(data.groupby('Title')['Age'].transform('median'), inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "o4A84dEAPOwy"
-   },
-   "outputs": [],
-   "source": [
-    "# Embarked 최빈값으로 채우기\n",
-    "data['Embarked'] = data['Embarked'].fillna('S')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "CJjbn2YUQug8"
-   },
-   "source": [
-    "**3) AgeGroup 변수 추가**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "YHv6AA2ah0_6"
-   },
-   "outputs": [],
-   "source": [
-    "# 변수 추가\n",
-    "bins = [0, 16, 25, 35, 60, 100]\n",
-    "data['AgeGroup'] = pd.cut(data['Age'], \n",
-    "                          bins=bins, \n",
-    "                          labels=['0_16', '17_25', '26_35', '36_60', '61_100'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "TfOiIj7lCfiG"
-   },
-   "source": [
-    "**4) 불필요한 변수 제거**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "oLG_6OZVCfsc"
-   },
-   "outputs": [],
-   "source": [
-    "# 불필요한 열 제거\n",
-    "drop_cols = ['PassengerId', 'Name', 'Age', 'Ticket', 'Cabin']\n",
-    "data.drop(drop_cols, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "FmptGbWLBHn5"
-   },
-   "source": [
-    "**5) 가변수화**"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "CDnjJtWVfGyx"
-   },
-   "outputs": [],
-   "source": [
-    "# 가변수화\n",
-    "dummy_vars = ['Title', 'AgeGroup', 'Pclass', 'Sex', 'Embarked']\n",
-    "\n",
-    "for v in dummy_vars:\n",
-    "    dummies = pd.get_dummies(data[v], prefix=v, drop_first=True)\n",
-    "    data = pd.concat([data, dummies], axis=1)\n",
-    "    data.drop(v, axis=1, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "RG1UJL0osG8D"
    },
    "source": [
-    "**6) x, y 분리**"
+    "**1) x, y 분리**"
    ]
   },
   {
@@ -309,7 +170,7 @@
     "id": "KSZeA5DEQ2n9"
    },
    "source": [
-    "**7) 정규화**"
+    "**2) 정규화**"
    ]
   },
   {
@@ -329,7 +190,7 @@
     "id": "6bEXi1xXsG8E"
    },
    "source": [
-    "**8) 학습용, 평가용 데이터 분리**"
+    "**3) 학습용, 평가용 데이터 분리**"
    ]
   },
   {
@@ -815,10 +676,10 @@
    "source": [
     "# 6.모델 최적화\n",
     "\n",
-    "- SVM 모델을 GridSearchCV를 사용해 최적화합니다.\n",
+    "- Random Forest 모델을 GridSearchCV를 사용해 최적화합니다.\n",
     "- 파라미터 범위\n",
-    "    - C: [0.001, 0.01, 0.1, 1, 10, 100, 1000]\n",
-    "    - gamma: [0.001, 0.1, 1, 10]}\n",
+    "    - max_depth: range(5, 16)\n",
+    "    - n_estimators: range(60, 121, 10)\n",
     "- GridSearchCV 옵션\n",
     "    - cv=5"
    ]
